RESOLVED FIXED131326
Fallback to default storage session when there isn't a valid session ID
https://bugs.webkit.org/show_bug.cgi?id=131326
Summary Fallback to default storage session when there isn't a valid session ID
Daniel Bates
Reported 2014-04-07 16:17:37 PDT
We should fallback to the default storage session in WebKit1 and WebKit2 without NetworkProcess when we have a null private browsing session so as to make our behavior consistent with the analogous behavior in WebKit2 with NetworkProcess.
Attachments
Patch (5.23 KB, patch)
2014-04-07 16:49 PDT, Daniel Bates
ap: review+
Daniel Bates
Comment 1 2014-04-07 16:17:50 PDT
Daniel Bates
Comment 2 2014-04-07 16:49:17 PDT
Daniel Bates
Comment 3 2014-04-07 16:59:40 PDT
I didn't include a test for this change because it's not obvious to me how to write a test that disables private browsing via WebKit preferences and starts a load before WebKit notifies WebCore of the preference change ([-WebView _preferencesChanged] is called in WebKit1) such that we update the session ID of the page. I am open to suggestions.
Daniel Bates
Comment 4 2014-04-08 09:10:02 PDT
Note You need to log in before you can comment on or make changes to this bug.